--- a/texFiles/classicthesis-config.tex
+++ b/texFiles/classicthesis-config.tex
@@ -39,8 +39,8 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{Investigating Why Underrepresented Minorities Choose CS\xspace}
-\newcommand{\mySubtitle}{Gaining Insights Into The Effects Of Culturally Responsive Curriculum\xspace}
+\newcommand{\myTitle}{Gaining Insights Into The Effects Of Culturally Responsive Curriculum On Historically Underrepresented Students' Desire For Computer Science\xspace}
+\newcommand{\mySubtitle}{\xspace}
 %\newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
 \newcommand{\myName}{Omoju Miller\xspace}
 %\newcommand{\myProf}{Put name here\xspace}
