--- a/texFiles/titlepage.tex
+++ b/texFiles/titlepage.tex
@@ -4,13 +4,13 @@
     \begin{addmargin}[-1cm]{-3cm}
     \begin{center}
         \large
-        {\Large \textsc{Thomas \& Associates}}\\[1ex]
-        White Paper\\
-       
+        {\Large \textsc{AltAI}}\\[1ex]
+    
+      
 
         \vfill
 
-        \vskip1cm
+        Rough Draft ASEE 2016\\ \vskip1cm
         \rule{14cm}{0.4pt}\\ \bigskip
         \begingroup
             \Large
