--- a/DataAnalysis-Copy1.ipynb
+++ b/DataAnalysis-Copy1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -19,33 +19,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: /Users/omojumiller/.matplotlib/fontList.cache: No such file or directory\r\n"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "from pandas import DataFrame\n",
-    "import pandas as pd \n",
-    "import HelperFunctionDataAnalysis as myHelper # helper functions to display images\n",
-    "\n",
-    "import matplotlib as pl\n",
-    "font_cache_path = pl.get_cachedir() + '/fontList.cache'\n",
-    "%rm $font_cache_path\n",
-    "\n",
-    "\n"
+    "# inline graphs\n",
+    "%pylab inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# have inline graphs\n",
-    "%matplotlib inline"
+    "import sys\n",
+    "sys.path.append('helperFunctions/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pandas import DataFrame\n",
+    "import pandas as pd \n",
+    "import HelperFunctionDataAnalysis as myHelper # helper functions to display images"
    ]
   },
   {
