--- a/DataAnalysis-Copy1.ipynb
+++ b/DataAnalysis-Copy1.ipynb
@@ -62,17 +62,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dataPath = '/Users/omojumiller/Dropbox/Research/Dissertation/'\n",
+    "dataPath = '/Users/omojumiller/Dropbox/Research/DissertationSubmission/'\n",
     "\n",
     "cs10Spring_df = pd.read_csv(dataPath+'Data/CS10_Pre_Responses_Spring2015.csv') \n",
     "cs10Spring_pdf = pd.read_csv(dataPath+'Data/CS10_Post_Responses_Spring2015.csv')\n",
     "cs61a = pd.read_csv(dataPath+'Data/CS61A_Responses_Fall2014.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "183"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = \"In my project, I have a bunch of strings that are read in from a file. Most of them, when printed in the command console, exceed 80 characters in length and wrap around, looking ugly.\"\n",
+    "\n",
+    "len(strs)"
    ]
   },
   {
@@ -84,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -93,59 +117,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "atcs_1 I like to use computer science to solve problems.\n",
-      "atcs_2 I can learn to understand computing concepts.\n",
-      "atcs_3 I can achieve good grades (C or better) in computing courses.\n",
-      "atcs_4 I do not like using computer science to solve problems.\n",
-      "atcs_5 I am confident that I can solve problems by using computation\n",
-      "atcs_6 The challenge of solving problems using computer science appeals to me.\n",
-      "atcs_7 I am comfortable with learning computing concepts.\n",
-      "atcs_8 I am confident about my abilities with regards to computer science.\n",
-      "atcs_9 I do think I can learn to understand computing concepts.\n",
-      "atcsgender_1 Women are less capable of success in CS than men.\n",
-      "atcsgender_2 Women are smarter than men.\n",
-      "atcsgender_3 Men have better math and science abilities than women.\n",
-      "atcsjob_1 Knowledge of computing will allow me to secure a good job.\n",
-      "atcsjob_2 My career goals do not require that I learn computing skills.\n",
-      "atct_1 I am good at solving a problem by thinking about similar problems I’ve solved before.\n",
-      "atct_2 I have good research skills.\n",
-      "atct_3 I am good at using online search tools.\n",
-      "atct_4 I am persistent at solving puzzles or logic problems.\n",
-      "atct_5 I know how to write computer programs\n",
-      "atct_6 I am good at building things.\n",
-      "atct_7 I’m good at ignoring irrelevant details to solve a problem.\n",
-      "atct_8 I know how to write a computer program to solve a problem.\n",
-      "blg_1 In this class, I feel I belong.\n",
-      "blg_2 In this class, I feel awkward and out of place.\n",
-      "blg_3 In this class, I feel like my ideas count.\n",
-      "blg_4 In this class, I feel like I matter.\n",
-      "classmtr Our class materials (e.g., case studies and projects) were relevant and practical.\n",
-      "clet_1 I work well in teams.\n",
-      "clet_2 I think about the ethical, legal, and social implications of computing.\n",
-      "cltrcmp_1 I am comfortable interacting with peers from different backgrounds than my own (based on race, sexuality, income, and so on.)\n",
-      "cltrcmp_2 I have good cultural competence, or the ability to interact effectively with people from diverse backgrounds.\n",
-      "consent CONSENT If you agree to participate, please do so by clicking the \"I agree\" button on this survey.\n",
-      "gender Could I please know your gender\n",
-      "grade What grade do you think you will get in this class ?\n",
-      "major Do you have a declared major?\n",
-      "morecs Will you be taking any more CS classes (if so which ones?)\n",
-      "mtr_1 Before I came to UC Berkeley, I knew people who have careers in Computer Science.\n",
-      "mtr_2 There are people with careers in Computer Science who look like me.\n",
-      "mtr_3 I have role models within the Computer Science field that look like me.\n",
-      "name_1 It would really help make my research better if you could share you name with me.\n",
-      "name_2 It would really help make my research better if you could share you name with me. .1\n",
-      "prcs_1 Did you take a CS course in High School?\n",
-      "prcs_2 Did you have any exposure to Computer Science before UC Berkeley?\n",
-      "prcs_3 Did a family member introduce you to Computer Science?\n",
-      "prcs_4 Did you have a close family member who is a Computer Scientist or is affiliated with computing industry?\n",
-      "prcs_5 Did your high school offer AP CS?\n",
-      "prepared How prepared did you feel about this class before it started?\n",
-      "reason_class What is your reason for taking this class?\n",
-      "snap_python I was able to see how computational thinking carries over from Snap! to python\n",
-      "hiphop_d1 The hip-hop data module made me see how computation can enhance culture\n",
-      "hiphop_d2 Lyrical analysis gave me a new way to think about computation\n",
-      "song_ct I was able to build on my pre-existing knowledge about songs to further understand computation\n",
-      "timestamp Timestamp\n",
+      "atcs_1         I like to use computer science to solve problems.\n",
+      "atcs_2         I can learn to understand computing concepts.\n",
+      "atcs_3         I can achieve good grades (C or better) in computing courses.\n",
+      "atcs_4         I do not like using computer science to solve problems.\n",
+      "atcs_5         I am confident that I can solve problems by using computation\n",
+      "atcs_6         The challenge of solving problems using computer science appeals to me.\n",
+      "atcs_7         I am comfortable with learning computing concepts.\n",
+      "atcs_8         I am confident about my abilities with regards to computer science.\n",
+      "atcs_9         I do think I can learn to understand computing concepts.\n",
+      "atcsgender_1   Women are less capable of success in CS than men.\n",
+      "atcsgender_2   Women are smarter than men.\n",
+      "atcsgender_3   Men have better math and science abilities than women.\n",
+      "atcsjob_1      Knowledge of computing will allow me to secure a good job.\n",
+      "atcsjob_2      My career goals do not require that I learn computing skills.\n",
+      "atct_1         I am good at solving a problem by thinking about similar problems I’ve solved b\n",
+      "               efore.              \n",
+      "atct_2         I have good research skills.\n",
+      "atct_3         I am good at using online search tools.\n",
+      "atct_4         I am persistent at solving puzzles or logic problems.\n",
+      "atct_5         I know how to write computer programs\n",
+      "atct_6         I am good at building things.\n",
+      "atct_7         I’m good at ignoring irrelevant details to solve a problem.\n",
+      "atct_8         I know how to write a computer program to solve a problem.\n",
+      "blg_1          In this class, I feel I belong.\n",
+      "blg_2          In this class, I feel awkward and out of place.\n",
+      "blg_3          In this class, I feel like my ideas count.\n",
+      "blg_4          In this class, I feel like I matter.\n",
+      "classmtr       Our class materials (e.g., case studies and projects) were relevant and practical\n",
+      "               .                   \n",
+      "clet_1         I work well in teams.\n",
+      "clet_2         I think about the ethical, legal, and social implications of computing.\n",
+      "cltrcmp_1      I am comfortable interacting with peers from different backgrounds than my own (b\n",
+      "               ased on race, sexuality, income, and so on.)\n",
+      "cltrcmp_2      I have good cultural competence, or the ability to interact effectively with peop\n",
+      "               le from diverse backgrounds.\n",
+      "consent        CONSENT If you agree to participate, please do so by clicking the \"I agree\" butto\n",
+      "               n on this survey.   \n",
+      "gender         Could I please know your gender\n",
+      "grade          What grade do you think you will get in this class ?\n",
+      "major          Do you have a declared major?\n",
+      "morecs         Will you be taking any more CS classes (if so which ones?)\n",
+      "mtr_1          Before I came to UC Berkeley, I knew people who have careers in Computer Science.\n",
+      "                                   \n",
+      "mtr_2          There are people with careers in Computer Science who look like me.\n",
+      "mtr_3          I have role models within the Computer Science field that look like me.\n",
+      "name_1         It would really help make my research better if you could share you name with me.\n",
+      "                                   \n",
+      "name_2         It would really help make my research better if you could share you name with me.\n",
+      "                .1                 \n",
+      "prcs_1         Did you take a CS course in High School?\n",
+      "prcs_2         Did you have any exposure to Computer Science before UC Berkeley?\n",
+      "prcs_3         Did a family member introduce you to Computer Science?\n",
+      "prcs_4         Did you have a close family member who is a Computer Scientist or is affiliated w\n",
+      "               ith computing industry?\n",
+      "prcs_5         Did your high school offer AP CS?\n",
+      "prepared       How prepared did you feel about this class before it started?\n",
+      "reason_class   What is your reason for taking this class?\n",
+      "snap_python    I was able to see how computational thinking carries over from Snap! to python\n",
+      "hiphop_d1      The hip-hop data module made me see how computation can enhance culture\n",
+      "hiphop_d2      Lyrical analysis gave me a new way to think about computation\n",
+      "song_ct        I was able to build on my pre-existing knowledge about songs to further understan\n",
+      "               d computation       \n",
+      "timestamp      Timestamp           \n",
       "\n",
       "\n"
      ]
@@ -157,8 +191,16 @@
     "dd.columns = ['dataDecription', 'dataKeys']\n",
     "dataDescription = {}\n",
     "\n",
+    "print \"-\"* 32, 'Data Description', \"-\"\n",
     "for i, row in dd.iterrows():\n",
-    "    print row.dataKeys, row.dataDecription\n",
+    "    lineLength = len(row.dataDecription)\n",
+    "    if (lineLength > 80):\n",
+    "        lineOneEnd = 81\n",
+    "        print\"{:15}{:20}\".format(row.dataKeys, row.dataDecription[:lineOneEnd])\n",
+    "        print\"{:15}{:20}\".format('', row.dataDecription[lineOneEnd:])\n",
+    "    else:\n",
+    "         print\"{:15}{:20}\".format(row.dataKeys, row.dataDecription)\n",
+    "    \n",
     "    dataDescription[dd.dataKeys[i]] = dd.dataDecription[i]\n",
     "    \n",
     "print '\\n'\n",
@@ -184,7 +226,9 @@
     "\n",
     "dataDescription['atct_1'] = 'I am good at solving a problem by thinking \\nabout similar problems I have solved before.'\n",
     "dataDescription['atct_7'] = 'I am good at ignoring irrelevant details to solve a problem.'\n",
-    "dataDescription['cltrcmp_2'] = 'I have good cultural competence, or the ability to interact effectively \\n with people from diverse backgrounds.'\n"
+    "tmp = '\\n with people from diverse backgrounds.'\n",
+    "dataDescription['cltrcmp_2'] = 'I have good cultural competence, or the ability to interact effective' + tmp\n",
+    "\n"
    ]
   },
   {
