--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -560,47 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P value is: 0.00000, with a z statistic of 136551.00000\n",
-      "****\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test for statistical signifance\n",
-    "# Use non-parametric alternative to the t-test Mann-Whitney U test because we have ordinal data.\n",
-    "# Likert scale is ordinal and not normally distributed\n",
-    "# And I can use Mann Whitney to compare unequal sample size.\n",
-    "\n",
-    "import scipy.stats\n",
-    "z, p = scipy.stats.mannwhitneyu(cs61a.atct_5.values, cs10.atct_5.values)\n",
-    "                                                   \n",
-    "# We should usually use a two-tailed test because we have no a priori about \n",
-    "# one treatment being better than the other. \n",
-    "# We should therefore multiply p by two to obtain the p-value:\n",
-    "p_value = p * 2\n",
-    "\n",
-    "print 'P value is: %.5f, with a z statistic of %.5f'% (p_value, z)\n",
-    "\n",
-    "s = myHelper.stars(p)\n",
-    "\n",
-    "print s\n",
-    "# A low P value suggests that your sample provides enough evidence \n",
-    "# that you can reject the null hypothesis for the entire population.\n",
-    "# http://blog.minitab.com/blog/adventures-in-statistics/how-to-correctly-interpret-p-values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -641,7 +601,10 @@
     }
    ],
    "source": [
-    "# Test for statistical significance between students in CS10 and CS61a\n",
+    "# Test for statistical signifance\n",
+    "# Use non-parametric alternative to the t-test Mann-Whitney U test because we have ordinal data.\n",
+    "# Likert scale is ordinal and not normally distributed\n",
+    "# And I can use Mann Whitney to compare unequal sample size.\n",
     "\n",
     "#genPValues(atcs, '')\n",
     "#genPValues(atcsgender, '')\n",
@@ -729,6 +692,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Investigate Correlations among items"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
@@ -801,8 +771,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Correlation matrix of CS61A students who had previously taken CS10\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "cs61a_priorCS10 = cs61a[cs61a.priorcs10 == 'Yes']\n",
+    "\n",
+    "\n",
+    "cs61a_priorCS10_female = cs61a_priorCS10[cs61a_priorCS10.gender == 'Female']\n",
+    "cs61a_priorCS10_male = cs61a_priorCS10[cs61a_priorCS10.gender == 'Male']\n",
+    "cs61a_priorCS10_female = cs61a_priorCS10_female.reset_index(drop=True)\n",
+    "cs61a_priorCS10_male = cs61a_priorCS10_male.reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "dfSegmentsPriorCS10 = {}\n",
+    "dfSegmentsPriorCS10['cs61a_priorCS10_female'] = cs61a_priorCS10_female\n",
+    "dfSegmentsPriorCS10['cs61a_priorCS10_male'] = cs61a_priorCS10_female\n",
+    "\n",
+    "# dfSegmentsPriorCS10[] = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -811,12 +813,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I know how to write computer programs\n"
+      "cs61a_priorCS10_male\n",
+      "cs61a_priorCS10_female\n"
      ]
     }
    ],
    "source": [
-    "print dataDescription['atct_5']\n"
+    "# {figures/priorCS10_female_corr}\n",
+    "# {figures/priorCS10_male_corr}\n",
+    "\n",
+    "for key in dfSegmentsPriorCS10:\n",
+    "    print key\n",
+    "    flattened = [val for sublist in list_of_lists for val in sublist]\n",
+    "    df = eval(key + '[flattened]')\n",
+    "    corr = df.corr()\n",
+    "    mask = np.zeros_like(corr)\n",
+    "    mask[np.triu_indices_from(mask, 1)] = True\n",
+    "\n",
+    "    myFileName='Figures' + '/' + key +'_corr.pdf'\n",
+    "    rcParams['figure.figsize'] = 12, 8\n",
+    "    fig = figure(dpi=80) # no frame\n",
+    "\n",
+    "    with sns.axes_style(\"white\"):\n",
+    "        ax = sns.heatmap(corr, mask=mask, square=False, annot=True, vmin=-1, vmax=1,cmap='RdBu', fmt='+.1f')\n",
+    "        plt.xticks(rotation=70, ha='right');\n",
+    "        plt.yticks(rotation=2);\n",
+    "\n",
+    "    fig.savefig(myFileName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "### Plot data dimensions \n"
    ]
   },
   {
