feat: Rename help functions to tools

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
-    "import HelperFunctionDataAnalysis as myHelper # helper functions to display images"
+    "import tools as tools # helper functions to display images"
    ]
   },
   {
@@ -611,7 +611,7 @@
     "#genPValues(atct,'')\n",
     "#genPValues(clet,'')\n",
     "#genPValues(cltrcmp,'')\n",
-    "myHelper.genPValues(blg,'', 'cs10', 'cs61a', cs10, cs61a, dataDescription)"
+    "tools.genPValues(blg,'', 'cs10', 'cs61a', cs10, cs61a, dataDescription)"
    ]
   },
   {
@@ -688,7 +688,7 @@
     "#genPValues_2(atct)\n",
     "#genPValues_2(clet)\n",
     "#genPValues_2(cltrcmp)\n",
-    "myHelper.genPValues_2(blg, 'cs10', 'cs61a', cs10, cs61a, dataDescription)"
+    "tools.genPValues_2(blg, 'cs10', 'cs61a', cs10, cs61a, dataDescription)"
    ]
   },
   {
@@ -899,14 +899,14 @@
     "    \n",
     "    temp.append('cs10'+theCategory+attr+'.'+key+'.value_counts()')\n",
     "    a = eval(temp[0])\n",
-    "    myHelper.scaleData(a)\n",
-    "    x0 = myHelper.turnArray(a)\n",
+    "    tools.scaleData(a)\n",
+    "    x0 = tools.turnArray(a)\n",
     "    temp = []\n",
     "        \n",
     "    temp.append('cs61a'+theCategory+attr+'.'+key+'.value_counts()')\n",
     "    b = eval(temp[0])\n",
-    "    myHelper.scaleData(b)\n",
-    "    x1 = myHelper.turnArray(b)\n",
+    "    tools.scaleData(b)\n",
+    "    x1 = tools.turnArray(b)\n",
     "    temp = []\n",
     "        \n",
     "    return x0, x1\n",
@@ -934,7 +934,7 @@
     "    \n",
     "    for i in range(len(itemDimension)):\n",
     "        x0, x1 = getPlotDimensions(itemDimension[i], attr, theCategory)\n",
-    "        myHelper.genFigure(itemDimension[i], myFileName, theCategory, theXLabel, \n",
+    "        tools.genFigure(itemDimension[i], myFileName, theCategory, theXLabel, \n",
     "                           x0, x1, dataDescription[itemDimension[i]])\n",
     "        \n",
     "\n",
@@ -942,7 +942,7 @@
     "    \n",
     "    for i in range(len(itemDimension)):\n",
     "        x0, x1 = getPlotDimensions(itemDimension[i], genderAttr, theCategory)\n",
-    "        myHelper.genGenderFigure(itemDimension[i], myFileName, theCategory, genderAttr, theXLabel, \n",
+    "        tools.genGenderFigure(itemDimension[i], myFileName, theCategory, genderAttr, theXLabel, \n",
     "                                 x0, x1, dataDescription[itemDimension[i]])\n"
    ]
   },
