--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -10,34 +10,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# inline graphs\n",
-    "# %pylab inline\n",
+    "\n",
     "from pylab import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('helperFunctions/')\n",
+    "sys.path.append('tools/')\n",
     "from IPython.display import display # Allows the use of display() for DataFrames\n",
     "import seaborn as sns # Seaborn for nice visualizations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -521,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -560,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -573,28 +572,29 @@
       "Test for significance between CS10 and CS61A\n",
       "\n",
       "blg_1 \tIn this class, I feel I belong.\n",
-      "Female \t0.02153060 \tStatistically Significant: *\n",
+      "Female \t0.01076530 \tStatistically Significant: **\n",
       "\n",
       "\n",
       "Test for significance between CS10 and CS61A\n",
       "\n",
       "blg_2 \tIn this class, I feel awkward and out of place.\n",
+      "Female \t0.04761094 \tStatistically Significant: *\n",
       "\n",
       "\n",
       "Test for significance between CS10 and CS61A\n",
       "\n",
       "blg_3 \tIn this class, I feel like my ideas count.\n",
-      "Class \t0.00001109 \tStatistically Significant: ****\n",
-      "Female \t0.00000106 \tStatistically Significant: ****\n",
-      "Male \t0.00600122 \tStatistically Significant: **\n",
+      "Class \t0.00000554 \tStatistically Significant: ****\n",
+      "Female \t0.00000053 \tStatistically Significant: ****\n",
+      "Male \t0.00300061 \tStatistically Significant: **\n",
       "\n",
       "\n",
       "Test for significance between CS10 and CS61A\n",
       "\n",
       "blg_4 \tIn this class, I feel like I matter.\n",
-      "Class \t0.00000073 \tStatistically Significant: ****\n",
-      "Female \t0.00000141 \tStatistically Significant: ****\n",
-      "Male \t0.00074444 \tStatistically Significant: ***\n",
+      "Class \t0.00000036 \tStatistically Significant: ****\n",
+      "Female \t0.00000070 \tStatistically Significant: ****\n",
+      "Male \t0.00037222 \tStatistically Significant: ***\n",
       "\n",
       "\n"
      ]
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -647,33 +647,33 @@
      "text": [
       "Test for significance between CS10 and CS61A\n",
       "blg_1   :   In this class, I feel I belong.\n",
-      "NoPrior CS Class    0.000460  Statistically Significant:    ***       \n",
-      "No Prior CS Female  0.002089  Statistically Significant:    **        \n",
-      "No Prior CS Male    0.015097  Statistically Significant:    **        \n",
+      "NoPrior CS Class    0.000230  Statistically Significant:    ***       \n",
+      "No Prior CS Female  0.001045  Statistically Significant:    ***       \n",
+      "No Prior CS Male    0.007549  Statistically Significant:    **        \n",
       "\n",
       "\n",
       "Test for significance between CS10 and CS61A\n",
       "blg_2   :   In this class, I feel awkward and out of place.\n",
-      "NoPrior CS Class    0.014721  Statistically Significant:    **        \n",
-      "No Prior CS Female  0.025501  Statistically Significant:    *         \n",
+      "NoPrior CS Class    0.007361  Statistically Significant:    **        \n",
+      "No Prior CS Female  0.012750  Statistically Significant:    **        \n",
       "\n",
       "\n",
       "Test for significance between CS10 and CS61A\n",
       "blg_3   :   In this class, I feel like my ideas count.\n",
-      "Prior CS Class      0.007862  Statistically Significant:    **        \n",
-      "NoPrior CS Class    0.000012  Statistically Significant:    ****      \n",
-      "Prior CS Female     0.000485  Statistically Significant:    ***       \n",
-      "No Prior CS Female  0.000566  Statistically Significant:    ***       \n",
-      "No Prior CS Male    0.000992  Statistically Significant:    ***       \n",
+      "Prior CS Class      0.003931  Statistically Significant:    **        \n",
+      "NoPrior CS Class    0.000006  Statistically Significant:    ****      \n",
+      "Prior CS Female     0.000242  Statistically Significant:    ***       \n",
+      "No Prior CS Female  0.000283  Statistically Significant:    ***       \n",
+      "No Prior CS Male    0.000496  Statistically Significant:    ***       \n",
       "\n",
       "\n",
       "Test for significance between CS10 and CS61A\n",
       "blg_4   :   In this class, I feel like I matter.\n",
-      "Prior CS Class      0.014320  Statistically Significant:    **        \n",
+      "Prior CS Class      0.007160  Statistically Significant:    **        \n",
       "NoPrior CS Class    0.000000  Statistically Significant:    ****      \n",
-      "Prior CS Female     0.002419  Statistically Significant:    **        \n",
-      "No Prior CS Female  0.000269  Statistically Significant:    ***       \n",
-      "No Prior CS Male    0.000045  Statistically Significant:    ****      \n",
+      "Prior CS Female     0.001209  Statistically Significant:    ***       \n",
+      "No Prior CS Female  0.000134  Statistically Significant:    ****      \n",
+      "No Prior CS Male    0.000023  Statistically Significant:    ****      \n",
       "\n",
       "\n"
      ]
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
