--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -415,8 +415,7 @@
     "itemDimensions['atct'] = atct\n",
     "itemDimensions['blg'] = blg\n",
     "itemDimensions['clet'] = clet\n",
-    "itemDimensions['cltrcmp'] = cltrcmp\n",
-    "\n"
+    "itemDimensions['cltrcmp'] = cltrcmp\n"
    ]
   },
   {
@@ -700,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -717,6 +716,48 @@
     "\n",
     "\n",
     "flattened = [val for sublist in list_of_lists for val in sublist]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['atcs_1',\n",
+       " 'atcs_2',\n",
+       " 'atcs_3',\n",
+       " 'atcs_4',\n",
+       " 'atcs_5',\n",
+       " 'atcs_6',\n",
+       " 'atcs_7',\n",
+       " 'atcs_8',\n",
+       " 'atcs_9',\n",
+       " 'blg_1',\n",
+       " 'blg_2',\n",
+       " 'blg_3',\n",
+       " 'blg_4',\n",
+       " 'atct_1',\n",
+       " 'atct_2',\n",
+       " 'atct_3',\n",
+       " 'atct_4',\n",
+       " 'atct_5',\n",
+       " 'atct_6',\n",
+       " 'atct_7',\n",
+       " 'atct_8']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flattened"
    ]
   },
   {
